removed unused stuff

--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/google-signin": "^4.0.1",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/drawer": "^5.6.3",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "expo": "^37.0.0",
-    "expo-file-system": "~8.1.0",
+    "expo-av": "~8.1.0",
     "expo-font": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "expo-localization": "~8.1.0",
-    "expo-ui-kit": "^0.1.4",
     "firebase": "7.9.0",
     "i18n-js": "^3.5.1",
     "react": "16.9.0",
@@ -33,6 +32,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "8.1.1",
+    "react-native-youtube": "^2.0.1",
     "react-navigation": "^4.3.8",
     "react-navigation-drawer": "^2.4.13",
     "react-navigation-stack": "^2.3.13"
