--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@react-navigation/drawer": "^5.6.3",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
-    "expo": "^37.0.0",
+    "expo": "^37.0.11",
     "expo-av": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
+    "expo-keep-awake": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "expo-localization": "~8.1.0",
     "firebase": "7.9.0",
@@ -34,6 +35,7 @@
     "react-native-web": "^0.11.7",
     "react-native-webview": "8.1.1",
     "react-native-youtube": "^2.0.1",
+    "react-native-youtube-iframe": "^1.2.4",
     "react-navigation": "^4.3.8",
     "react-navigation-drawer": "^2.4.13",
     "react-navigation-stack": "^2.3.13"
