--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/picker": "^1.5.1",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/drawer": "^5.6.3",
     "@react-navigation/native": "^5.1.6",
